--- a/SistemaEscola/src/views/principalJFrame.form
+++ b/SistemaEscola/src/views/principalJFrame.form
@@ -71,7 +71,7 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="diarioAcademicoJMenu">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Diario academico"/>
+            <Property name="text" type="java.lang.String" value="Di&#xe1;rio acad&#xea;mico"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="gerenciarNotasJMenuItem">
@@ -97,6 +97,10 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Sistema Escola"/>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+      <Connection component="Form" name="getMaximumSize" type="method"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
