--- a/SistemaEscola/src/br/sistemaescola/views/CursoJInternalFrame.form
+++ b/SistemaEscola/src/br/sistemaescola/views/CursoJInternalFrame.form
@@ -252,7 +252,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/img/search_black.png"/>
             </Property>
-            <Property name="toolTipText" type="java.lang.String" value="Insira um professor e click neste bot&#xe3;o para pesquisar um curso por professor e poder edita-lo"/>
+            <Property name="toolTipText" type="java.lang.String" value="procure por professores existentes"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="searchProfessorJButton.addActionListener(action);&#xa;searchProfessorJButton.setActionCommand(&quot;pesquisarProfessor&quot;);"/>
@@ -327,7 +327,7 @@
         </Property>
         <Property name="toolTipText" type="java.lang.String" value="Click aqui para limpar todos os campos do cadastro"/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Default Cursor"/>
+          <Color id="Cursor Padr&#xe3;o"/>
         </Property>
       </Properties>
       <AccessibilityProperties>
