--- a/SistemaEscola/src/br/sistemaescola/views/ProfessorJInternalFrame.form
+++ b/SistemaEscola/src/br/sistemaescola/views/ProfessorJInternalFrame.form
@@ -113,20 +113,18 @@
                       <Component id="jLabel9" alignment="0" min="-2" pref="59" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <Component id="diaJTextField" min="-2" pref="39" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="jComboBox3" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="jTextField8" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="nomeJTextField" pref="225" max="32767" attributes="0"/>
+                              <Component id="rgJTextField" alignment="0" pref="225" max="32767" attributes="0"/>
+                              <Component id="cpfJTextField" pref="225" max="32767" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
+                          <Component id="disciplinaPesquisaJToggleButton" min="-2" pref="54" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="nomeJTextField" min="-2" pref="225" max="-2" attributes="0"/>
-                      <Component id="rgJTextField" alignment="0" min="-2" pref="225" max="-2" attributes="0"/>
-                      <Component id="cpfJTextField" min="-2" pref="225" max="-2" attributes="0"/>
+                      <Component id="nascimentoJTextField1" min="-2" pref="112" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
-                  <Component id="disciplinaPesquisaJToggleButton" min="-2" pref="54" max="-2" attributes="0"/>
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -152,12 +150,10 @@
                       <Component id="RG" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="rgJTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="3" pref="3" max="-2" attributes="0"/>
+                  <EmptySpace min="4" pref="4" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel9" alignment="3" max="32767" attributes="0"/>
-                      <Component id="diaJTextField" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jComboBox3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jTextField8" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="nascimentoJTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -197,39 +193,6 @@
             <Property name="text" type="java.lang.String" value="Nascimento:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="diaJTextField">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Dia"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JComboBox" name="jComboBox3">
-          <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="12">
-                <StringItem index="0" value="Janeiro (Jan)"/>
-                <StringItem index="1" value="Fevereiro (Fev)"/>
-                <StringItem index="2" value="Mar&#xe7;o (Mar)"/>
-                <StringItem index="3" value="Abril (Abr)"/>
-                <StringItem index="4" value="Maio (Mai)"/>
-                <StringItem index="5" value="Junho (Jun)"/>
-                <StringItem index="6" value="Julho (Jul)"/>
-                <StringItem index="7" value="Agosto (Ago)"/>
-                <StringItem index="8" value="Setembro (Set)"/>
-                <StringItem index="9" value="Outubro (Out)"/>
-                <StringItem index="10" value="Novembro (Nov)"/>
-                <StringItem index="11" value="Desembro (Des)"/>
-              </StringArray>
-            </Property>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JTextField" name="jTextField8">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="ano - 4"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField8ActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JToggleButton" name="disciplinaPesquisaJToggleButton">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
@@ -243,6 +206,8 @@
             <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="/*"/>
             <AuxValue name="JavaCodeGenerator_ListenersCodePost" type="java.lang.String" value="*/&#xa;&#xa;disciplinaPesquisaJToggleButton.addActionListener(professorController);&#xa;disciplinaPesquisaJToggleButton.setActionCommand(&quot;disciplinaPesquisaJToggleButton&quot;);"/>
           </AuxValues>
+        </Component>
+        <Component class="javax.swing.JTextField" name="nascimentoJTextField1">
         </Component>
       </SubComponents>
     </Container>
