--- a/SistemaEscola/src/br/sistemaescola/views/FaltasJInternalFrame.form
+++ b/SistemaEscola/src/br/sistemaescola/views/FaltasJInternalFrame.form
@@ -55,7 +55,7 @@
                               <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
-                              <Component id="jPanel3" min="-2" pref="228" max="-2" attributes="0"/>
+                              <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
                           </Group>
                       </Group>
@@ -342,10 +342,7 @@
                               <Component id="quartaAulaJCheckBox" max="32767" attributes="0"/>
                               <Component id="terceiraAulajCheckBox" max="32767" attributes="0"/>
                               <Group type="102" attributes="0">
-                                  <Component id="segundaAulaJCheckBox" max="32767" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" attributes="0">
+                                  <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="primeiraAulaJCheckBox" min="-2" max="-2" attributes="0"/>
                                       <Group type="102" attributes="0">
@@ -356,12 +353,16 @@
                                           <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
-                                  <EmptySpace min="-2" pref="243" max="-2" attributes="0"/>
+                                  <EmptySpace min="243" max="32767" attributes="0"/>
+                              </Group>
+                              <Group type="102" attributes="0">
+                                  <Component id="segundaAulaJCheckBox" max="32767" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -378,9 +379,9 @@
                       <Component id="mesesJComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="anoJTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="62" max="32767" attributes="0"/>
-                  <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace pref="67" max="32767" attributes="0"/>
+                  <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
                   <Component id="primeiraAulaJCheckBox" min="-2" pref="29" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="segundaAulaJCheckBox" min="-2" max="-2" attributes="0"/>
@@ -454,9 +455,9 @@
             <Property name="text" type="java.lang.String" value="Quarto Aula"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabel5">
+        <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Marque os periodos em que o aluno faltou"/>
+            <Property name="text" type="java.lang.String" value="Marque os periodos que o aluno faltou"/>
           </Properties>
         </Component>
       </SubComponents>
